package ub.edu;

public class Main {

    public static void main(String[] args) {
	// write your code here
        Joc joc = new Joc();
        
        System.out.println(joc.jugar());
    }
}
