@startuml

title __EDU's Class Diagram__\n

  namespace ub.edu {
    class ub.edu.Dau {
        + tirar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Joc {
        + Joc()
        + jugar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Jugador {
        + Jugador()
        + tirar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Main {
        {static} + main()
    }
  }
  

  ub.edu.Joc o-- ub.edu.Jugador : jugador1
  ub.edu.Joc o-- ub.edu.Jugador : jugador2
  ub.edu.Jugador o-- ub.edu.Dau : dau


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
